--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -297,5 +297,5 @@
         crossorigin="anonymous"></script>
 </body>
 
-<script src="../static/main.js"></script>
+<script src="main.js"></script>
 </html>
